--- a/zerowaste/requirements.txt
+++ b/zerowaste/requirements.txt
@@ -5,7 +5,7 @@ django-dotenv==1.4.2
 django-extensions==3.1.2
 djangorestframework==3.12.4
 djangorestframework-jwt==1.11.0
-graphviz==0.16
+# graphviz==0.16
 mysqlclient==2.0.3
 pygraphviz==1.7
 PyJWT==1.7.1
