--- a/zerowaste/requirements.txt
+++ b/zerowaste/requirements.txt
@@ -11,6 +11,7 @@ Django==3.0.10
 django-allauth==0.44.0
 django-dotenv==1.4.2
 django-extensions==3.1.2
+django-mysql==3.11.1
 djangorestframework==3.12.4
 djangorestframework-jwt==1.11.0
 drf-yasg==1.20.0
