--- a/zerowaste/requirements.txt
+++ b/zerowaste/requirements.txt
@@ -1,4 +1,6 @@
 asgiref==3.3.1
+boto3==1.17.77
+botocore==1.20.77
 bson==0.5.10
 certifi==2020.12.5
 cffi==1.14.5
@@ -13,6 +15,7 @@ django-dotenv==1.4.2
 django-extensions==3.1.2
 django-filter==2.4.0
 django-mysql==3.11.1
+django-storages==1.11.1
 djangorestframework==3.12.4
 djangorestframework-jwt==1.11.0
 drf-yasg==1.20.0
@@ -21,12 +24,12 @@ idna==2.10
 inflection==0.5.1
 itypes==1.2.0
 Jinja2==2.11.3
+jmespath==0.10.0
 MarkupSafe==1.1.1
 mysqlclient==2.0.3
 oauthlib==3.1.0
 packaging==20.9
 pycparser==2.20
-pygraphviz==1.7
 PyJWT==1.7.1
 pyparsing==2.4.7
 python-dateutil==2.8.1
@@ -37,6 +40,7 @@ requests==2.25.1
 requests-oauthlib==1.3.0
 ruamel.yaml==0.17.4
 ruamel.yaml.clib==0.2.2
+s3transfer==0.4.2
 six==1.15.0
 sqlparse==0.4.1
 ujson==4.0.2
