--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -51,7 +51,7 @@ jobs:
         ECR_REPOSITORY: zero-waste
         IMAGE_TAG: production # 나중에 환경별로 IMAGE_TAG 설정
       run: |
-        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG ./zerowaste/.
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
         echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
 
