--- a/zerowaste/nginx/nginx.conf
+++ b/zerowaste/nginx/nginx.conf
@@ -1,38 +1,15 @@
-worker_processes  4;
-events {
-    worker_connections  8000;
-     multi_accept on;
-}
-http {
-    include       mime.types;
+server {
+    listen       80;
+    server_name 18.218.186.160;
+    charset utf-8;
+    client_max_body_size 128M;
 
-    default_type  application/octet-stream;
-    sendfile        on;
-    keepalive_timeout  65;
-    server_tokens off; # 보안상 nginx 버전 숨기기
+    location / {
+        include proxy_params;
+        proxy_pass http://18.218.186.160:8000;
+    }
 
-    server_names_hash_bucket_size 64; #기본값:32
-    server_names_hash_max_size 2048; #기본값:512
-
-    server {
-        listen       80;
-        server_name 18.218.186.160;
-        charset utf-8;
-        client_max_body_size 128M;
-
-        location / {
-            include proxy_params;
-            proxy_pass http://18.218.186.160:8000;
-        }
-
-        location /static {
-            autoindex on;
-            alias /path/to/staticfiles;
-        }
-
-        error_page   500 502 503 504  /50x.html;
-        location = /50x.html {
-            root   html;
-        }
+    location /static/ {
+        alias /home/ubuntu/ZeroWaste_Server/zerowaste/static;
     }
 }
